univention-mozilla-firefox (12.0.0-2) unstable; urgency=low

  * Bug #45863: Fix location of UCR template

 -- Philipp Hahn <hahn@univention.de>  Wed, 07 Feb 2018 18:20:41 +0100

univention-mozilla-firefox (12.0.0-1) unstable; urgency=medium

  * Bug #45841: UCS-4.3 version bump

 -- Jürn Brodersen <brodersen@univention.de>  Mon, 11 Dec 2017 14:40:56 +0100

univention-mozilla-firefox (11.0.1-2) unstable; urgency=low

  * Bug #42322: switch to firefox-esr 

 -- Felix Botner <botner@univention.de>  Thu, 23 Feb 2017 15:37:10 +0100

univention-mozilla-firefox (11.0.1-1) unstable; urgency=low

  * Bug #42322: switch to firefox-esr

 -- Felix Botner <botner@univention.de>  Thu, 23 Feb 2017 15:06:22 +0100

univention-mozilla-firefox (11.0.0-1) unstable; urgency=medium

  * Bug #41963: UCS-4.2 version bump

 -- Philipp Hahn <hahn@univention.de>  Fri, 12 Aug 2016 13:59:18 +0200

univention-mozilla-firefox (10.0.1-1) unstable; urgency=medium

  * Bump version for UCS 4.1 (Bug #39729)

 -- Stefan Gohmann <gohmann@univention.de>  Tue, 03 Nov 2015 22:06:37 +0100

univention-mozilla-firefox (9.0.1-1) unstable; urgency=medium

  * Bug #36453: Remove legacy "firefox" from the dependency options

 -- Arvid Requate <requate@univention.de>  Wed, 05 Nov 2014 17:42:57 +0100

univention-mozilla-firefox (9.0.0-1) unstable; urgency=low

  * Starting UCS 4.0 development (Bug #35266)

 -- Alexander Kramer <kramer@univention.de>  Fri, 22 Aug 2014 09:52:21 +0200

univention-mozilla-firefox (8.0.0-3) unstable; urgency=low

  * Revert last change (Bug #33640)

 -- Erik Damrose <damrose@univention.de>  Fri, 07 Feb 2014 13:19:11 +0100

univention-mozilla-firefox (8.0.0-2) unstable; urgency=low

  * Add Firefox addon that hides the tab bar. This is necessary for the 
    appliance setup user experience. It was removed in Firefox 24esr, the
    addon restores the feature. (Bug #33640)

 -- Erik Damrose <damrose@univention.de>  Mon, 03 Feb 2014 10:30:02 +0100
