@@ -32,33 +32,28 @@
 
 #DEBHELPER#
 
-univention-config-registry set firefox/prefs/checkdefaultbrowser?false
+if [ "$1" = "configure" ]
+then
+	eval "$(univention-config-registry shell locale/default firefox/prefs/homepage)"
+	case "${locale_default:-}" in
+	de_*) lang='de-DE' tld='de' ;;
+	*) lang='en-US' tld='com' ;;
+	esac
+	case "${firefox_prefs_homepage:-}" in
+	http://www.univention.de/) firefox_prefs_homepage="https://www.univention.$tld/" ;;
+	esac
 
-eval "$(univention-config-registry shell)"
+	update-alternatives --install /usr/bin/x-www-browser x-www-browser /usr/bin/firefox 101
 
-if	[ -z "$firefox_prefs_homepage" ] ||
-	[ "$firefox_prefs_homepage" = "http://www.univention.de/ucd-welcome-2_0-0.html" ] ||
-	[ "$firefox_prefs_homepage" = "http://www.univention.de/ucd-welcome-2_1-0.html" ] ||
-	[ "$firefox_prefs_homepage" = "http://www.univention.de/ucd-welcome-2_2-0.html" ] ||
-	[ "$firefox_prefs_homepage" = "http://www.univention.de/ucd-welcome-2_4-0.html" ] ||
-	[ "$firefox_prefs_homepage" = "http://www.univention.de/ucd-welcome-2_3-0.html" ]; then
-	univention-config-registry set firefox/prefs/homepage="http://www.univention.de/"
-fi
-
-update-alternatives --install /usr/bin/x-www-browser x-www-browser /usr/bin/firefox 101
-
-if [ "$1" = "configure" ] && [ -z "$2" ]; then
-
-	mkdir -p /etc/univention/skel/Downloads
-
-	univention-config-registry set firefox/prefs/spellchecker/dictionary="en-US"
-	if [ -n "$locale_default" ]; then
-		lang=$(echo $locale_default | sed -e 's|_.*||')
-		if [ "$lang" = "de" ]; then
-			univention-config-registry set firefox/prefs/spellchecker/dictionary="de-DE"
-		fi
+	if [ -z "$2" ]
+	then
+		mkdir -p /etc/univention/skel/Downloads
 	fi
+
+	univention-config-registry set \
+		firefox/prefs/spellchecker/dictionary="$Lang" \
+		${firefox_prefs_homepage:+firefox/prefs/homepage="$firefox_prefs_homepage"} \
+		firefox/prefs/checkdefaultbrowser?false
 fi
 
 exit 0
-
